--- a/package.json
+++ b/package.json
@@ -42,5 +42,15 @@
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
     "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.18",
+    "gulp": "^4.0.2",
+    "gulp-jsvalidate": "^6.0.0",
+    "gulp-postcss": "^10.0.0",
+    "gulp-purgecss": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-watch": "^5.0.1",
+    "tailwindcss": "^3.4.1"
   }
 }
